# QuartetScoresExternal

./: .gitmodules
genesis/: .stxxl  150_all.tre  150_reference.tre  CMakeLists.txt  QuartetCounterFewTrees.hpp  QuartetCounterLookup.hpp  QuartetScoreComputer.hpp  QuartetScores.cpp  TreeInformation.hpp  quartet_newick_writer.hpp
genesis/lib/genesis/: CMakeLists.txt
